<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:text="@string/main_title"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp"
            android:text="@string/acc_exp"
            android:id="@+id/acc_exp" />

        <TextView android:text="@string/accept_link"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/republicAccept"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:clickable="true"
            android:textColor="@color/link_blue"
            android:onClick="onClick_accept"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp"
            android:text="@string/pup_exp"
            android:id="@+id/pup_exp" />

        <TextView android:text="@string/pickup_link"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/republicPickup"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:clickable="true"
            android:textColor="@color/link_blue"
            android:onClick="onClick_pickup"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_marginTop="15dp"
            android:layout_gravity="left"
            android:layout_below="@+id/textView" />

    </LinearLayout>

</RelativeLayout>
